Rewrite accordion code from scratch
Didn't go too well the first time. Wasn't happy. Let's try this again.

--- a/src/css/demo.css
+++ b/src/css/demo.css
@@ -1,14 +1,11 @@
+/** Demo styling, not necessary for the accordion's final effect. */
 .fixed-accordion{
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
 	.fixed-accordion > li{
-		position: absolute;
-		top:	0;
-		left:	0;
-		right:	0;
-		overflow: hidden;
+
 	}
 		.fixed-accordion > li > h3{
 			background: #2c4d2b;
