Drop "Fixed" from project's name
Simply calling it "Accordion" is enough.

--- a/src/css/accordion.css
+++ b/src/css/accordion.css
@@ -1,8 +1,8 @@
-.fixed-accordion{
+.accordion{
 	position: relative;
 	overflow: hidden;
 }
-	.fixed-accordion > li{
+	.accordion > li{
 		position: absolute;
 		overflow: hidden;
 		top:	0;
