--- a/src/css/demo.css
+++ b/src/css/demo.css
@@ -1,13 +1,13 @@
 /** Demo styling, not necessary for the accordion's final effect. */
-.fixed-accordion{
+.accordion{
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
-	.fixed-accordion > li{
+	.accordion > li{
 
 	}
-		.fixed-accordion > li > h3{
+		.accordion > li > h3{
 			background: #2c4d2b;
 			color: #fff;
 			padding: .5em;
@@ -18,16 +18,16 @@
 			user-select:			none;
 		}
 
-		.fixed-accordion > li > .fold{
+		.accordion > li > .fold{
 			padding: 1em;
 		}
 
 		/** Align fruit graphics/demo content */
-		.fixed-accordion img{
+		.accordion img{
 			max-width: 20em;
 			margin-right: 1.5em;
 			float: left;
 		}
-			.fixed-accordion img + p{
+			.accordion img + p{
 				margin-top: 0;
 			}
