Add option to disable animated heights
Jolty transitions were still visible when toggling sections, at least on
less privileged browsers (which means crappier devices as well). I added
an option to disable animated heights in the hopes of easing some of the
strain placed on the CPU.

A better solution might've been to allow developers if they even want to
change the container's height at all. It's certainly easier to work with
fixed dimensions and "overflow: scroll;" applied, meaning dynamic height
won't always be needed/desired.

--- a/src/css/accordion.css
+++ b/src/css/accordion.css
@@ -1,9 +1,22 @@
 .accordion{
 	position: relative;
 	overflow: hidden;
+
+	-webkit-transition:	.3s step-start height;
+	-moz-transition:	.3s step-start height;
+	-o-transition:		.3s step-start height;
+	transition:			.3s step-start height;
 }
+	.accordion.shrinking{
+		-webkit-transition-timing-function:	step-end;
+		-moz-transition-timing-function:	step-end;
+		-o-transition-timing-function:		step-end;
+		transition-timing-function:			step-end;
+	}
+
+
 	/** Transitions */
-	.accordion,
+	.accordion.anim-height,
 	.accordion > li{
 		-webkit-transition:	.3s ease height, .3s ease top;
 		-moz-transition:	.3s ease height, .3s ease top;
