Use universal selectors for applying base styling
Accordions won't always target <ul> or <ol> elements, obviously, so it's
unreasonable to assume every collapsible section will be an LI element.

--- a/src/css/accordion.css
+++ b/src/css/accordion.css
@@ -17,14 +17,14 @@
 
 	/** Transitions */
 	.accordion.anim-height,
-	.accordion > li{
+	.accordion > *{
 		-webkit-transition: .3s ease height, .3s ease top;
 		-moz-transition:    .3s ease height, .3s ease top;
 		-o-transition:      .3s ease height, .3s ease top;
 		transition:         .3s ease height, .3s ease top;
 	}
 
-	.accordion > li{
+	.accordion > *{
 		position: absolute;
 		overflow: hidden;
 		top:    0;
