Add logic to connect nested Accordion instances

--- a/accordion.css
+++ b/accordion.css
@@ -41,6 +41,12 @@ p{
 	margin: 0;
 }
 
+.fold > .accordion{
+	margin-bottom: 1em;
+}
+	.fold > .accordion > * > :last-child{
+		background: #ddd;
+	}
 #mindless-copy{
 	margin: 0 -1em;
 	color: #aaa;
